Centered all buttons and fixed layout issues. Ensured that win/lose page was working properly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,9 @@ html {
 #questionZone{
 	display: none;
 }
-
+.end p{
+	text-align: center;
+}
 .error p{
 	color: red;
 }
